--- a/src/Components/Modals/Modal.css
+++ b/src/Components/Modals/Modal.css
@@ -1,6 +1,8 @@
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
+input::-webkit-inner-spin-button,
+select::-webkit-outer-spin-button,
+select::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
@@ -11,7 +13,8 @@ input[type=number] {
 }
 
 textarea:focus,
-input:focus {
+input:focus,
+select:focus {
     outline: none;
 }
 
