status modal failing

--- a/src/Components/StatusModal/StatusModal.css
+++ b/src/Components/StatusModal/StatusModal.css
@@ -1,51 +1,20 @@
-.BeneficiaryInput {
+.StatusDiv {
     width: 100%;
     margin-top: 1.5rem;
 }
 
-.BeneficiaryContent {
-    width: 100%;
-    height: 1rem;
-    margin: 0.3rem auto 1.2rem;
-    border: none;
-    border-bottom: 1px solid var(--primary-color);
-    font-size: 0.8rem;
-    padding: 0.4rem;
-}
-
-.BeneficiarySelect {
-    width: 100%;
-    border: none;
-    margin: 0.3rem auto 1.2rem;
-    border-bottom: 1px solid var(--primary-color);
-    font-size: 0.8rem;
-    padding: 0.4rem;
-}
-
-.BeneficiaryBtn {
-    display: block;
-    width: 90%;
-    margin: auto;
-    height: 2.2rem;
-    background: var(--primary-color);
-    padding: 0.6rem;
+.StatusText {
+    font-size: 0.75rem;
+    letter-spacing: 1px;
     text-align: center;
-    cursor: pointer;
-    border: none;
-    border-radius: 0.5rem;
-    color: #fff;
-    font-weight: bolder;
-    font-size: 0.96rem;
 }
 
-.BeneficiaryBtn:focus,
-.BeneficiaryBtn:active {
-    border: none;
-    outline: none;
+.SuccessImg, .FailedImg {
+    display: block;
+    width: 80%;
+    margin: 1rem auto;
 }
 
-.BeneficiaryBtn:hover,
-.paystack-button:hover {
-    background: var(--primary-color);
-    opacity: 0.5;
+.FailedImg {
+    width: 70%;
 }
