--- a/src/Components/StatusModal/StatusModal.css
+++ b/src/Components/StatusModal/StatusModal.css
@@ -9,7 +9,8 @@
     text-align: center;
 }
 
-.SuccessImg, .FailedImg {
+.SuccessImg,
+.FailedImg {
     display: block;
     width: 80%;
     margin: 1rem auto;
