--- a/src/Components/Login-SignUp/Login-SignUp.css
+++ b/src/Components/Login-SignUp/Login-SignUp.css
@@ -1,171 +1,116 @@
-body {
-  background: var(--body-color);
-}
-
-.login {
-  padding-top: 25px;
-}
-
-.loginForm {
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  font-size: 1.2em;
-  width: 45%;
-  margin: 10px auto;
-  border: 2px solid #f2f2f2;
-  border-radius: 10px;
-  background: #f2f2f2;
-  color: #000;
-}
-
-.loginForm label {
-  margin-top: 10px;
-}
-
-.loginForm input {
-  padding: 10px;
-  margin-bottom: 5px;
-}
-
-#loginBtn {
-  width: 150px;
-  padding: 5px;
-  font-size: 1.3em;
-  margin: 5px 0;
-  background: #32e0c4;
-  color: #fff;
-  border-style: none;
-  border-radius: 5px;
-  box-shadow: 0 0 5px #a8a7a7;
-  cursor: pointer;
-  text-decoration: none;
-  text-align: center;
-}
-
-.linkWrap {
-  margin: 5px;
-}
-
-.link {
-  text-decoration: none;
-  color: #32e0c4;
-}
-
-.link:hover {
-  cursor: pointer;
-  color: #9c0702;
-}
-
-span.policy {
-  margin-left: auto;
-  color: #000;
-  word-spacing: 20px;
-  cursor: pointer;
-}
-
-.btnClose {
-  padding: 10px;
-  font-size: 1.3em;
-  line-height: 14px;
-  border-radius: 5px;
-  float: right;
-  margin-right: 28%;
-  text-decoration: none;
-  color: #fff;
-  background: rgb(146, 143, 143);
-}
-
-/* CSS Styling for the Signup component begins here */
-
-.signup {
-  padding-top: 25px;
-}
-
-.signupForm {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 15px;
-  width: 45%;
-  margin: 10px auto;
-  border: 2px solid #f2f2f2;
-  border-radius: 10px;
-  padding: 20px 10px 10px 10px;
-  background: #f2f2f2;
-  color: #000;
-}
-
-.signupForm input {
-  width: 90%;
-  padding: 8px;
-  margin: 2px;
-}
-
-.signupForm select {
-  width: 98%;
-  padding: 8px;
-  margin: 2px;
-}
-
-#signupBtn {
-  width: 200px;
-  padding: 15px;
-  font-size: 1.3em;
-  margin: 5px 0;
-  background: #32e0c4;
-  color: #fff;
-  border-style: none;
-  border-radius: 5px;
-  box-shadow: 0 0 5px #a8a7a7;
-  cursor: pointer;
-}
-
-.password_error_show {
-  color: red;
-}
-
-.password_error_none {
-  display: none;
-}
-
-.modal {
-  position: fixed;
-  top: 0;
-  left: 0;
+.Login, .SignUP {
+  background: var(--about-bg);
   width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.671);
-  display: block;
+  height: 100vh;
+  padding-top: 6rem;
 }
 
-@media screen and (max-width: 780px) {
-  .loginForm {
-    width: 65%;
-  }
+.SignUP {
+  background: var(--about-bg);
+  width: 100%;
+  height: auto;
+  padding: 4rem 0;
+}
 
-  .signupForm {
-    grid-template-columns: 1fr;
-    grid-gap: 1px;
-    height: 500px;
-    overflow: auto;
-    width: 75%;
-  }
+.FormWrapper {
+  width: 35%;
+  background: #fff;
+  margin: auto;
+  padding: 2rem;
+  box-shadow: -1px 2px 2px 1px rgba(4, 4, 19, 0.1);
+}
 
-  .signupForm input {
-    width: 90%;
-    padding: 8px;
-  }
+.LoginHero {
+  width: 30%;
+  margin: 0 auto 2rem;
+}
 
-  #signupBtn {
-    padding: 5px;
-  }
+.LoginLogo {
+  display: block;
+  margin: 1rem auto;
+}
 
-  .signup {
-    overflow: auto;
-  }
+.HeroSmallText, .ForgetLink {
+  font-size: 0.9rem;
+  text-align: center;
+  font-weight: 900;
+}
 
-  .btnClose {
-    margin-bottom: 25%;
-  }
+.LoginLabel {
+  display: block;
+  font-size: 0.8rem;
+  font-weight: 900;
+}
+
+.LoginLabelLink {
+  text-decoration: none;
+  color: var(--text-color);
+}
+
+.LoginLabelLink:hover {
+  color: var(--primary-color);
+}
+
+.LoginInputs {
+  display: block;
+  width: 95%;
+  padding: 1rem 0.5rem;
+  margin: 0.5rem 0;
+  border: none;
+  border-bottom: 1.5px solid var(--primary-color);
+}
+
+.LoginLink {
+  text-decoration: none;
+  color: var(--primary-color);
+  padding-left: 0.5rem;
+}
+
+.RegBtn {
+  display: block;
+  width: 90%;
+  margin: 1.5rem auto;
+  height: 2.5rem;
+  background: var(--primary-color);
+  padding: 0.6rem;
+  text-align: center;
+  cursor: pointer;
+  border: none;
+  border-radius: 0.5rem;
+  color: #fff;
+  font-weight: bolder;
+  font-size: 0.96rem;
+}
+
+.RegBtn:focus,
+.RegBtn:active {
+  border: none;
+  outline: none;
+}
+
+.RegBtn:hover,
+.paystack-button:hover {
+  background: var(--primary-color);
+  opacity: 0.5;
+}
+
+.LoginSelect {
+  display: block;
+  width: 97%;
+  border: none;
+  border-bottom: 1px solid var(--primary-color);
+  font-size: 0.8rem;
+  padding: 1rem 0.5rem;
+  margin: 0.5rem 0;
+}
+
+.PasswordShow {
+  display: block;
+  color: red;
+  font-size: 0.8rem;
+  font-weight: 900;
+}
+
+.PasswordNone {
+  display: none;
 }
