--- a/src/Components/Login-SignUp/Login-SignUp.css
+++ b/src/Components/Login-SignUp/Login-SignUp.css
@@ -117,6 +117,33 @@
   display: none;
 }
 
+@media screen and (min-width: 780px) {
+  .SignUP .FormWrapper {
+    width: 36%;
+    margin: auto;
+  }
+
+  .FormGroup {
+    display: flex;
+    align-items: center;
+  }
+
+  .FloatRight {
+    padding-left: 5rem;
+  }
+
+  .LoginLabel {
+    margin-top: 0.7rem;
+  }
+
+  .LoginSelect {
+    display: block;
+    width: 100%;
+    padding: 1rem;
+  }
+  
+}
+
 @media screen and (max-width: 700px) {
 
   .Login,
@@ -135,5 +162,11 @@
   .HeroSmallText,
   .ForgetLink {
     font-size: 0.8rem;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .SignUP .LoginHero {
+    width: 70%;
   }
 }
