--- a/src/Components/Login-SignUp/Login-SignUp.css
+++ b/src/Components/Login-SignUp/Login-SignUp.css
@@ -31,6 +31,12 @@
   margin: 1rem auto;
 }
 
+.ErrorMessage {
+  color: red;
+  font-size: 0.8rem;
+  font-weight: bold;
+}
+
 .HeroSmallText,
 .ForgetLink {
   font-size: 0.9rem;
