moved images to cloudinary, connected benefactor components to backend, updated design feedback from mate

--- a/src/Pages/Home/HowWeWork/HowWeWork.css
+++ b/src/Pages/Home/HowWeWork/HowWeWork.css
@@ -61,7 +61,6 @@
 }
 
 .column .image {
-    background-image: url('./image.png');
     width: 148px;
     height: 103px;
     background-repeat: no-repeat;
@@ -93,7 +92,7 @@
     }
 
     .column .image {
-        background-image: none;
+        display: none;
     }
 
     .column .title {
