--- a/src/Pages/Settings/AccountStatement/AccountStatement.css
+++ b/src/Pages/Settings/AccountStatement/AccountStatement.css
@@ -8,6 +8,12 @@
   margin: 0 4%;
 }
 
+.calendarDiv{
+  font-size: 2em;
+  color: #32e0c4;
+  cursor: pointer;
+}
+
 #stmtEmail {
   width: 366px;
 }
