--- a/src/Pages/Transactions/Transactions.css
+++ b/src/Pages/Transactions/Transactions.css
@@ -9,15 +9,13 @@ body {
 
 .gridContainer {
     display: grid;
-    height: 460px;
-    grid-template-columns: 50% 40%;
-    grid-template-rows: 30% auto;
-    grid-gap: 40px;
-    column-gap: 50px;
+    grid-template-columns: 40% 55%;
+    grid-template-rows: 20% auto;
+    grid-column-gap: 2.5em; 
+    grid-row-gap: 1.5em; 
 }
 
 .grid-col1 {
-    place-self: center;
     justify-self: start;
 }
 
@@ -33,7 +31,6 @@ body {
 }
 
 .grid-col2 {
-    place-self: center;
     justify-self: end;
 }
 
@@ -49,16 +46,21 @@ body {
     color: #fff;
 }
 
+.calendar_icon {
+    font-size: 2em;
+    color: #32e0c4;
+    cursor: pointer;
+}
+
 .grid-col3 .gridBox {
     display: grid;
     grid-template-columns: 40% 10% 40%;
     grid-auto-rows: 50px 100px;
     height: 190px;
-    width: 90%;
     background: rgba(118, 234, 215, 0.1);
     border-radius: 10px;
     padding: 5px;
-    column-gap: 5px;
+    column-gap: 2px;
     row-gap: 5px;
     justify-content: space-evenly;
 }
@@ -77,9 +79,9 @@ body {
     display: grid;
     grid-template-columns: 80px 30px;
     grid-auto-rows: 15px;
-    column-gap: 15px;
+    column-gap: 10px;
     row-gap: 25px;
-    padding: 13px;
+    padding: 10px;
     font-size: 14px;
 }
 
@@ -112,8 +114,8 @@ body {
 
 .transactionsTable th {
     text-align: left;
-    font-size: 12px;
-    padding: 2px;
+    font-size: 14px;
+    padding: 5px;
 }
 
 .transactionSent,
@@ -122,12 +124,13 @@ body {
 .userName,
 .date {
     font-size: 11px;
+    padding: 5px;
 }
 
 .transactionSent,
 .transactionFail {
     color: #eb5757;
-    width: 20%;
+    width: 25%;
 }
 
 .transactionRecieved {
@@ -136,12 +139,13 @@ body {
 }
 
 .userName {
-    width: 55%;
+    width: 13em;
+    word-spacing: 1em;
 }
 
 .date {
     text-align: right;
-    width: 20%;
+    width: 8em;
 }
 
 .noTransactions {
@@ -162,11 +166,9 @@ body {
     }
 
     .gridContainer {
-        grid-template-columns: 300px;
-        grid-template-rows: 10% 15% 35% 40%;
+        grid-template-columns: 21em;
+        grid-template-rows: 5em 5em 11em auto;
         padding: 5px;
-        grid-column-gap: 5px;
-        grid-row-gap: 20px;
     }
 
     .grid-col1,
@@ -186,7 +188,6 @@ body {
         grid-template-columns: 35% 10% 35%;
         grid-auto-rows: 40px 110px;
         height: 130px;
-        background: rgba(118, 234, 215, 0.1);
         border-radius: 10px;
         padding: 5px;
         column-gap: 2px;
@@ -214,7 +215,13 @@ body {
         height: 70px;
     }
 
+    .grid-col4 {
+        border-radius: 10px;
+        padding: 5px;
+    }
+
     .userName {
         width: 45%;
+        word-spacing: 0.5em;
     }
 }
